# templateless-python

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: confirm_email.py  feedback.py  qr_code.py  simple.py  verification.py
templateless/: __init__.py  collection.py  common.py  content.py  email.py  email_address.py  errors.py  templateless.py
templateless/components/: __init__.py  button.py  image.py  link.py  otp.py  qr_code.py  signature.py  socials.py  store_badges.py  text.py  view_in_browser.py
tests/: test_email_address.py
